crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__minify_styles__minify_styles-2.snap
---
source: crates/oxvg_optimiser/src/jobs/minify_styles.rs
expression: "test_config(r#\"{ \"minifyStyles\": true }\"#,\nSome(r#\"<svg id=\"test\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\">\n    <style>\n        <![CDATA[\n            .st0{ fill:red; padding-top: 1em; padding-right: 1em; padding-bottom: 1em; padding-left: 1em; } @media screen and (max-width: 200px) { .st0 { display: none; } }\n        ]]>\n    </style>\n    <style></style>\n    <rect width=\"100\" height=\"100\" class=\"st0\" style=\"stroke-width:3; margin-top: 1em; margin-right: 1em; margin-bottom: 1em; margin-left: 1em;\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="test" viewBox="0 0 100 100">
    <style>.st0{fill:red;padding:1em}@media screen and (width&lt;=200px){.st0{display:none}}</style>
    <style></style>
    <rect width="100" height="100" class="st0" style="stroke-width:3px;margin:1em"></rect>
</svg>
