crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__minify_styles__minify_styles-3.snap
---
source: crates/oxvg_optimiser/src/jobs/minify_styles.rs
expression: "test_config(r#\"{ \"minifyStyles\": {} }\"#,\nSome(r#\"<svg id=\"test\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\">\n    <style>\n        <![CDATA[\n            .st0{ fill:red; padding-top: 1em; padding-right: 1em; padding-bottom: 1em; padding-left: 1em; background-image: url('data:image/svg,<svg width=\"16\" height=\"16\"/>') } @media screen and (max-width: 200px) { .st0 { display: none; } }\n        ]]>\n    </style>\n    <rect width=\"100\" height=\"100\" class=\"st0\" style=\"stroke-width:3; margin-top: 1em; margin-right: 1em; margin-bottom: 1em; margin-left: 1em;\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="test" viewBox="0 0 100 100">
    <style>
        .st0{fill:red;background-image:url("data:image/svg,<svg width=\"16\" height=\"16\"/>");padding:1em}@media screen and (width<=200px){.st0{display:none}}
    </style>
    <rect width="100" height="100" class="st0" style="stroke-width:3px;margin:1em"/>
</svg>
