crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__minify_styles__minify_styles-6.snap
---
source: crates/oxvg_optimiser/src/jobs/minify_styles.rs
expression: "test_config(r#\"{ \"minifyStyles\": { \"removeUnused\": false } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <style>\n        .used { p: 1 }\n        .unused { p: 2 }\n    </style>\n    <script>\n        /* script element prevents removing unused styles */\n    </script>\n    <g class=\"used\">\n        test\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <style>.used{p:1}.unused{p:2}</style>
    <script>
        /* script element prevents removing unused styles */
    </script>
    <g class="used">
        test
    </g>
</svg>
