crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__minify_styles__minify_styles-9.snap
---
source: crates/oxvg_optimiser/src/jobs/minify_styles.rs
expression: "test_config(r#\"{ \"minifyStyles\": {} }\"#,\nSome(r#\"<svg viewBox=\"0 0 2203 1777\" xmlns=\"http://www.w3.org/2000/svg\">\n    <style type=\"text/css\">\n        .st6{font-family:Helvetica LT Std, Helvetica, Arial; font-size:118px;; stroke-opacity:0; fill-opacity:0;}\n    </style>\n    <text class=\"st6\" transform=\"translate(353.67 1514)\">\n        tell stories in 250 characters\n    </text>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2203 1777">
    <style type="text/css">
        .st6{stroke-opacity:0;fill-opacity:0;font-family:Helvetica LT Std,Helvetica,Arial;font-size:118px}
    </style>
    <text class="st6" transform="translate(353.67 1514)">tell stories in 250 characters</text>
</svg>
